--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
@@ -39,9 +39,7 @@
       <div class="left-section-content">
         <div class="question-wrapper">
           <h2 class="question-text two">
-            <a id="q2" href="#brand-section" role="button"
-              >Click here to select your car....</a
-            >
+            <a id="q2" href="#brand-section" role="button">Click here to select your car....</a>
           </h2>
         </div>
         <!--  
@@ -64,11 +62,7 @@
     </div>
     <div class="right-section">
       <div class="image-container">
-        <img
-          [src]="staticPics[currentImageIndex]"
-          alt="Static Image"
-          class="animated-image"
-        />
+        <img [src]="staticPics[currentImageIndex]" alt="Static Image" class="animated-image" />
       </div>
     </div>
   </div>
@@ -198,11 +192,7 @@
   </div>
 </div>
 
-<div
-  class="brand-section"
-  id="brand-section"
-  [class.shifted]="isFilterSidebarOpen"
->
+<div class="brand-section" id="brand-section" [class.shifted]="isFilterSidebarOpen">
   <br />
   <div class="brand-tabs">
     <button (click)="toggleFilterSidebar()" class="brand-logo filter">
@@ -228,61 +218,27 @@
     </button> -->
     <div class="form-check form-check-inline">
       <label class="form-check-label" for="renault">
-        <img
-          src="/assets/images/renonewlogo.jpg"
-          alt="Renault"
-          class="brand-icon"
-        />
+        <img src="/assets/images/renonewlogo.jpg" alt="Renault" class="brand-icon" />
       </label>
-      <input
-        class="form-check-input custom-radio"
-        type="radio"
-        name="brand"
-        id="renault"
-        value="Renault"
-        [(ngModel)]="selectedBrand"
-        (change)="displayCars('Renault')"
-        checked
-      />
+      <input class="form-check-input custom-radio" type="radio" name="brand" id="renault" value="Renault"
+        [(ngModel)]="selectedBrand" (change)="displayCars('Renault')" checked />
     </div>
 
     <div class="form-check form-check-inline">
       <label class="form-check-label" for="nissan">
-        <img
-          src="/assets/images/nissanlogo.png"
-          alt="Nissan"
-          class="brand-icon"
-        />
+        <img src="/assets/images/nissanlogo.png" alt="Nissan" class="brand-icon" />
       </label>
-      <input
-        class="form-check-input custom-radio"
-        type="radio"
-        name="brand"
-        id="nissan"
-        value="Nissan"
-        [(ngModel)]="selectedBrand"
-        (change)="displayCars('Nissan')"
-      />
+      <input class="form-check-input custom-radio" type="radio" name="brand" id="nissan" value="Nissan"
+        [(ngModel)]="selectedBrand" (change)="displayCars('Nissan')" />
     </div>
 
     <div class="form-check form-check-inline">
       <label class="form-check-label" for="mitsubishi">
-        <img
-          src="/assets/images/newm.webp"
-          alt="Mitsubishi"
-          class="brand-icon"
-        />
+        <img src="/assets/images/newm.webp" alt="Mitsubishi" class="brand-icon" />
       </label>
       <br />
-      <input
-        class="form-check-input custom-radio"
-        type="radio"
-        name="brand"
-        id="mitsubishi"
-        value="Mitsubishi"
-        [(ngModel)]="selectedBrand"
-        (change)="displayCars('Mitsubishi')"
-      />
+      <input class="form-check-input custom-radio" type="radio" name="brand" id="mitsubishi" value="Mitsubishi"
+        [(ngModel)]="selectedBrand" (change)="displayCars('Mitsubishi')" />
     </div>
   </div>
 
@@ -326,12 +282,8 @@
             <p class="car-bookings car-details space">
               <strong>Rating:</strong>
               <span class="stars">
-                <img
-                  *ngFor="let star of [].constructor(car.rating)"
-                  src="assets/images/star.png"
-                  alt="Star"
-                  class="star-icon"
-                />
+                <img *ngFor="let star of [].constructor(car.rating)" src="assets/images/star.png" alt="Star"
+                  class="star-icon" />
               </span>
             </p>
           </div>
@@ -354,11 +306,8 @@
               <strong>Transmission:</strong> {{ car.transmission }}
             </p>
             <p class="car-bookings car-details space">
-              <strong>Warranty:</strong> {{ car.warranty }} Years<img
-                src="assets/images/warn.png"
-                alt=""
-                class="warranty-icon"
-              />
+              <strong>Warranty:</strong> {{ car.warranty }} Years<img src="assets/images/warn.png" alt=""
+                class="warranty-icon" />
             </p>
           </div>
         </div>
@@ -366,21 +315,13 @@
           <strong class="extra-features-title">Extra Features:</strong>
           <ul>
             <li *ngFor="let feature of car.extraFeatures">
-              <img
-                src="/assets/images/ver.png"
-                alt="Verified"
-                class="verified-icon"
-              />
+              <img src="/assets/images/ver.png" alt="Verified" class="verified-icon" />
               {{ feature }}
             </li>
           </ul>
         </div>
         <button class="book-slot-btn" (click)="toggleBooking(car.name)">
-          <img
-            [src]="'/assets/images/bkslot.png'"
-            alt="Book Slot"
-            class="slot-icon"
-          />
+          <img [src]="'/assets/images/bkslot.png'" alt="Book Slot" class="slot-icon" />
           Book Slot
         </button>
       </div>
@@ -390,7 +331,7 @@
 
 <!-- Sidebar for test slot -->
 @if (isBookingClicked){
-<div class="test-drive-dialog">
+<div class="test-drive-dialog show">
   <div class="dialog-content">
     <!-- Left Side: Car Info -->
     <div class="car-info">
@@ -398,15 +339,11 @@
         <img src="/assets/images/close.png" alt="Close Dialog" />
       </button>
       <div class="car-image-container">
-        <img
-          [src]="selectedCar.image"
-          alt="{{ selectedCar.name }}"
-          class="car-image"
-        />
+        <img [src]="selectedCar.image" alt="{{ selectedCar.name }}" class="car-image" />
       </div>
       <h3 class="car-name space middle">
         <img [src]="selectedCar.brandIcon" alt="" class="brandimg" />{{
-          selectedCar.name
+        selectedCar.name
         }}
       </h3>
       <div class="combine">
@@ -435,12 +372,8 @@
           <p class="car-bookings car-details space">
             <strong>Rating:</strong>
             <span class="stars">
-              <img
-                *ngFor="let star of [].constructor(selectedCar.rating)"
-                src="assets/images/star.png"
-                alt="Star"
-                class="star-icon"
-              />
+              <img *ngFor="let star of [].constructor(selectedCar.rating)" src="assets/images/star.png" alt="Star"
+                class="star-icon" />
             </span>
           </p>
         </div>
@@ -463,11 +396,8 @@
             <strong>Transmission:</strong> {{ selectedCar.transmission }}
           </p>
           <p class="car-bookings car-details space">
-            <strong>Warranty:</strong> {{ selectedCar.warranty }} Years<img
-              src="assets/images/warn.png"
-              alt=""
-              class="warranty-icon"
-            />
+            <strong>Warranty:</strong> {{ selectedCar.warranty }} Years<img src="assets/images/warn.png" alt=""
+              class="warranty-icon" />
           </p>
         </div>
       </div>
@@ -475,11 +405,7 @@
         <strong class="extra-features-title">Extra Features:</strong>
         <ul>
           <li *ngFor="let feature of selectedCar.extraFeatures">
-            <img
-              src="/assets/images/ver.png"
-              alt="Verified"
-              class="verified-icon"
-            />
+            <img src="/assets/images/ver.png" alt="Verified" class="verified-icon" />
             {{ feature }}
           </li>
         </ul>
@@ -522,24 +448,15 @@
       <form id="slot-booking-form">
         <div class="formbold-steps">
           <ul>
-            <li
-              class="formbold-step-menu1"
-              [ngClass]="{ active: currentStep === 1 }"
-            >
+            <li class="formbold-step-menu1" [ngClass]="{ active: currentStep === 1 }">
               <span>1</span>
               Sign Up
             </li>
-            <li
-              class="formbold-step-menu2"
-              [ngClass]="{ active: currentStep === 2 }"
-            >
+            <li class="formbold-step-menu2" [ngClass]="{ active: currentStep === 2 }">
               <span>2</span>
               Test Slot Availability
             </li>
-            <li
-              class="formbold-step-menu3"
-              [ngClass]="{ active: currentStep === 3 }"
-            >
+            <li class="formbold-step-menu3" [ngClass]="{ active: currentStep === 3 }">
               <span>3</span>
               Confirmation
             </li>
@@ -547,82 +464,40 @@
         </div>
 
         <!-- Step 1 Content -->
-        <div
-          class="formbold-form-step-1"
-          [ngClass]="{ active: currentStep === 1 }"
-        >
+        <div class="formbold-form-step-1" [ngClass]="{ active: currentStep === 1 }">
           <div>
             <label for="name" class="formbold-form-label">User name</label>
-            <input
-              type="text"
-              name="name"
-              placeholder="Enter your name"
-              id="firstname"
-              class="formbold-form-input"
-              required
-            />
+            <input type="text" name="name" placeholder="Enter your name" id="firstname" class="formbold-form-input"
+              required />
           </div>
 
           <div class="formbold-input-flex">
             <div>
-              <label for="phone" class="formbold-form-label"
-                >Phone Number</label
-              >
-              <input
-                type="text"
-                name="phone"
-                id="phone"
-                class="formbold-form-input"
-                placeholder="Enter your phone number"
-                required
-              />
+              <label for="phone" class="formbold-form-label">Phone Number</label>
+              <input type="text" name="phone" id="phone" class="formbold-form-input"
+                placeholder="Enter your phone number" required />
             </div>
             <div>
-              <label for="email" class="formbold-form-label"
-                >Email Address</label
-              >
-              <input
-                type="email"
-                name="email"
-                placeholder="Enter your email"
-                id="email"
-                class="formbold-form-input"
-                required
-              />
+              <label for="email" class="formbold-form-label">Email Address</label>
+              <input type="email" name="email" placeholder="Enter your email" id="email" class="formbold-form-input"
+                required />
             </div>
           </div>
 
           <div>
             <label for="address" class="formbold-form-label">Address</label>
-            <input
-              type="text"
-              name="address"
-              id="address"
-              placeholder="Flat 4, 24 Castle Street, Perth, PH1 3JY"
-              class="formbold-form-input"
-            />
+            <input type="text" name="address" id="address" placeholder="Flat 4, 24 Castle Street, Perth, PH1 3JY"
+              class="formbold-form-input" />
           </div>
         </div>
 
         <!-- Step 2 Content -->
-        <div
-          class="formbold-form-step-2"
-          [ngClass]="{ active: currentStep === 2 }"
-        >
+        <div class="formbold-form-step-2" [ngClass]="{ active: currentStep === 2 }">
           <div>
-            <label for="preferred-date" class="formbold-form-label"
-              >Preferred Date</label
-            >
-            <input
-              type="date"
-              id="preferred-date"
-              class="formbold-form-input"
-              required
-            />
+            <label for="preferred-date" class="formbold-form-label">Preferred Date</label>
+            <input type="date" id="preferred-date" class="formbold-form-input" required />
 
-            <label for="time-slot" class="formbold-form-label"
-              >Preferred Time Slot</label
-            >
+            <label for="time-slot" class="formbold-form-label">Preferred Time Slot</label>
             <select id="time-slot" class="formbold-form-input" required>
               <option value="" disabled selected>Select a time slot</option>
               <option value="morning">Morning (9:00 AM - 12:00 PM)</option>
@@ -630,29 +505,25 @@
               <option value="evening">Evening (3:00 PM - 6:00 PM)</option>
             </select>
 
-            <label for="showroom" class="formbold-form-label"
-            >Preferred Showroom Location</label
-          >
-          <select id="showroom" class="formbold-form-input" required>
-            <option value="" disabled selected>Select a Location</option>
-            <option value="morning">Chennai </option>
-            <option value="afternoon">Madurai </option>
-            <option value="evening">Coimbatore </option>
-          </select>
+            <label for="showroom" class="formbold-form-label">Preferred Showroom Location</label>
+            <select id="showroom" class="formbold-form-input" required>
+              <option value="" disabled selected>Select a Location</option>
+              <option value="morning">Chennai </option>
+              <option value="afternoon">Madurai </option>
+              <option value="evening">Coimbatore </option>
+            </select>
           </div>
         </div>
 
         <!-- Step 3 Content -->
-        <div
-          class="formbold-form-step-3"
-          [ngClass]="{ active: currentStep === 3 }"
-        >
+        <div class="formbold-form-step-3" [ngClass]="{ active: currentStep === 3 }">
           <div class="formbold-form-input">
             <p>
-             You are about to finalize your booking. Please ensure the information provided is correct before confirming
-             You will be responsible for any damage to the car during the rental period, excluding wear and tear.
+              You are about to finalize your booking. Please ensure the information provided is correct before
+              confirming
+              You will be responsible for any damage to the car during the rental period, excluding wear and tear.
             </p>
-<br><br>
+            <br><br>
             <div>
               <button class="formbold-confirm-btn active">
                 Yes! I Agree.
@@ -665,28 +536,17 @@
 
         <!-- Buttons for Navigation -->
         <div class="formbold-form-btn-wrapper">
-          <button
-            class="formbold-btn"
-            (click)="goBack()"
-            *ngIf="currentStep > 1"
-          >
+          <button class="formbold-btn" (click)="goBack()" *ngIf="currentStep > 1">
             Back
           </button>
 
           <button class="formbold-btn" (click)="nextStep()">
             {{ currentStep === 3 ? "Submit" : "Next Step" }}
-            <svg
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_1675_1807)">
                 <path
                   d="M10.7814 7.33312L7.20541 3.75712L8.14808 2.81445L13.3334 7.99979L8.14808 13.1851L7.20541 12.2425L10.7814 8.66645H2.66675V7.33312H10.7814Z"
-                  fill="white"
-                />
+                  fill="white" />
               </g>
               <defs>
                 <clipPath id="clip0_1675_1807">
