--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -130,15 +130,14 @@
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap align-items-center justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-2">Traffic</h6>
+              <h6 class="text-medium mb-2">Feedback Analysis</h6>
             </div>
             <div class="right">
               <div class="select-style-1 mb-2">
                 <div class="select-position select-sm">
-                  <select class="bg-ligh">
-                    <option value="">Last 6 Months</option>
-                    <option value="">Last 3 Months</option>
-                    <option value="">Last Year</option>
+                  <select class="bg-light"  [(ngModel)]="selectedYear">
+                    <option value="y2024">2024</option>
+                    <option value="y2025">2025</option>
                   </select>
                 </div>
               </div>
@@ -154,11 +153,9 @@
                     <span class="bg-color primary-bg"> </span>
                     <div class="text">
                       <p class="text-sm text-success">
-                        <span class="text-dark">Store Visits</span>
-                        +25.55%
-                        <i class="lni lni-arrow-up"></i>
+                        <span class="text-dark">Positive feedbacks</span>
                       </p>
-                      <h2>3456</h2>
+                      <h2>{{totalpositive}}</h2>
                     </div>
                   </div>
                 </li>
@@ -167,16 +164,15 @@
                     <span class="bg-color danger-bg"></span>
                     <div class="text">
                       <p class="text-sm text-danger">
-                        <span class="text-dark">Visitors</span> -2.05%
-                        <i class="lni lni-arrow-down"></i>
+                        <span class="text-dark">Negative Feedbacks</span> 
                       </p>
-                      <h2>3456</h2>
+                      <h2>{{totalnegative}}</h2>
                     </div>
                   </div>
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;"></canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px;">{{chart4}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
